feat(auth): implement JWT authentication with user registration and login

--- a/.env.example
+++ b/.env.example
@@ -25,3 +25,7 @@ OPENAI_CHAT_MODEL=gpt-4o-mini
 # RAG Configuration
 RAG_TOP_K=5
 RAG_MAX_CONTEXT_CHARS=12000
+
+# Authentication Configuration
+JWT_SECRET=your_super_secret_jwt_key_change_me_in_production
+JWT_EXPIRES_IN=7d
