feat(database): implement TypeORM migrations and user-document relationship

--- a/.env.example
+++ b/.env.example
@@ -9,7 +9,7 @@ POSTGRES_USER=rag
 POSTGRES_PASSWORD=rag_password_change_me
 
 # TypeORM Configuration
-DB_SYNCHRONIZE=true
+DB_MIGRATIONS_RUN=true
 DB_LOGGING=true
 
 # Chroma Configuration
