--- a/package.json
+++ b/package.json
@@ -17,7 +17,13 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "typeorm": "typeorm-ts-node-commonjs -d src/database/data-source.ts",
+    "migration:generate": "pnpm run build && pnpm run typeorm migration:generate",
+    "migration:create": "pnpm run typeorm migration:create",
+    "migration:run": "pnpm run build && pnpm run typeorm migration:run",
+    "migration:revert": "pnpm run build && pnpm run typeorm migration:revert",
+    "migration:show": "pnpm run build && pnpm run typeorm migration:show"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
@@ -29,6 +35,7 @@
     "@nestjs/typeorm": "^11.0.0",
     "bcrypt": "^6.0.0",
     "chromadb": "^3.2.0",
+    "dotenv": "^17.2.3",
     "mime-types": "^3.0.2",
     "multer": "^2.0.2",
     "openai": "^6.15.0",
