--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,33 +1,13 @@
 services:
-  postgres:
-    image: postgres:16-alpine
-    container_name: rag_postgres
-    restart: unless-stopped
+  app:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: rag-doc-app
+    ports:
+      - '3000:3000'
     env_file:
       - .env
-    environment:
-      POSTGRES_DB: ${POSTGRES_DB}
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-    ports:
-      - "5432:5432"
     volumes:
-      - rag_pg_data:/var/lib/postgresql/data
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U rag -d rag"]
-      interval: 5s
-      timeout: 3s
-      retries: 20
-
-  # chroma:
-  #   image: chromadb/chroma:latest
-  #   container_name: rag_chroma
-  #   restart: unless-stopped
-  #   ports:
-  #     - "${CHROMA_PORT}:8000"
-  #   volumes:
-  #     - rag_chroma_data:/chroma/chroma
-
-volumes:
-  rag_pg_data:
-  rag_chroma_data:
+      - ./storage:/app/storage
+    restart: unless-stopped
